# rolllog

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d673fa0d282_quickstart_nullable_fields.py  48681c6c470b_phase3_techniques_system.py  7889dfe14c4f_initial_users_table.py  8d459e120387_training_sessions_table.py
backend/app/: config.py  main.py
backend/app/ai/: __init__.py  coach.py
backend/app/core/: deps.py  security.py
backend/app/crud/: session.py  technique.py  user.py
backend/app/models/: __init__.py  session.py  technique.py  user.py
backend/app/routers/: auth.py  coach.py  profile.py  sessions.py  techniques.py
backend/app/schemas/: auth.py  coach.py  profile.py  session.py  technique.py
backend/scripts/: seed_techniques.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthLayout.tsx  BeltSelector.tsx  Button.tsx  Input.tsx  LegendCard.tsx  NavBar.tsx  ProtectedRoute.tsx  SessionRewardModal.tsx  Silhouettes.tsx  TagInput.tsx  TechniqueTagInput.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  coachApi.ts  sessionsApi.ts  techniquesApi.ts  types.ts
frontend/src/pages/: Coach.tsx  Compendium.tsx  Dashboard.tsx  LogSession.tsx  Login.tsx  Onboarding.tsx  Signup.tsx  TrainingLog.tsx  WallOfLegends.tsx
